<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".ui.recipe.RecipeSearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_search_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_search_input_layout_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:helperText="@string/recipe_search_input_layout_helper"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_search_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recipe_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/recipe_search_btn_text"
        app:layout_constraintTop_toBottomOf="@+id/recipe_search_input_layout" />

    <FrameLayout
        android:id="@+id/recipe_search_result_layout"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_search_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ProgressBar
            android:id="@+id/recipe_search_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/colorOnPrimary"
            android:visibility="gone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recipe_search_empty_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="?attr/colorOnPrimary"
            android:text="@string/recipe_search_empty_text"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:visibility="gone"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>