<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailRecipeFragment">

    <ProgressBar
        android:id="@+id/detail_recipe_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/detail_recipe_bottom_sheet_peek_height"
            android:orientation="vertical">

        <TextView
            android:id="@+id/detail_recipe_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/recipe_item_image_view"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/recipe_item_image_height"
                    android:padding="@dimen/default_padding"
                    android:scaleType="center" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/default_padding"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_recipe_category_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_recipe_category_title_text"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceSubtitle1"/>

                    <TextView
                        android:id="@+id/detail_recipe_category_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceSubtitle1"/>

                    <TextView
                        android:id="@+id/detail_recipe_area_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/detail_recipe_area_title_text"
                        android:textAppearance="?attr/textAppearanceSubtitle1"/>

                    <TextView
                        android:id="@+id/detail_recipe_area_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/detail_recipe_area_title_text_view" />

                    <TextView
                        android:id="@+id/detail_recipe_video_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/detail_recipe_video_textview_text"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="bottom"
                        android:textStyle="bold"
                        android:textColor="?android:textColorLink"
                        android:padding="@dimen/default_padding"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_recipe_ingredients_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimarySurface"
            android:paddingHorizontal="@dimen/default_padding"
            app:behavior_hideable="false"
            app:behavior_peekHeight="@dimen/detail_recipe_bottom_sheet_peek_height"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/detail_recipe_bottomsheet_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_expand_arrow" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detail_recipe_instructions_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>